# ui_sim

./: LICENSE  README.md
hector_gazebo/.hector_gazebo_thermal_camera/: CMakeLists.txt
hector_gazebo/hector_gazebo_plugins/include/hector_gazebo_plugins/: gazebo_ros_imu.h
hector_gazebo/hector_gazebo_plugins/src/: gazebo_ros_imu.cpp
laughlin_uw_plugins/: CMakeLists.txt  package.xml
laughlin_uw_plugins/include/laughlin_uw_plugins/: dvl_plugin.hpp  gps_plugin.hpp  owtt_plugin.hpp  trajectory_forcer.hpp  usbl_plugin.hpp
laughlin_uw_plugins/msg/: DVL.msg  OWTT.msg  USBL.msg
laughlin_uw_plugins/src/: dvl_plugin.cpp  gps_plugin.cpp  iceJointStatePub.cpp  owtt_plugin.cpp  spherical_test.cpp  trajectory_forcer.cpp  usbl_plugin.cpp
tdma_broadcaster/: CMakeLists.txt  package.xml
tdma_broadcaster/src/: tdma_broadcaster.cpp
under_ice_sim/: CMakeLists.txt  README.md  package.xml
under_ice_sim/config/: 500m_East.yaml  500m_NW.yaml  500m_North.yaml  500m_Square.yaml  500m_West.yaml  500m_sq_from_ship.yaml  default.rviz  diamond_10m_sides.yaml  lawnmower_1000x100_6times_10m.yaml  lawnmower_1000x100_6times_10m_rotated.yaml  lawnmower_1000x500_2times_10m.yaml  lawnmower_100x10_7times_10m.yaml  lawnmower_iceRel_1000x100_6times_10m.yaml  lawnmower_iceRel_100x10x7_10m.yaml
under_ice_sim/launch/: 500m_square_from_ship.launch  DRmodel.launch  data_record.launch  diamond_10m_sides.launch  dvl_test.launch  empty_underwater_world.launch  gps_test.launch  ice.launch  ice_relative_odom_publisher.launch  imu_test.launch  play_EKF_sample_data.launch  send_waypoints_500m_Down.launch  send_waypoints_500m_E.launch  send_waypoints_500m_N.launch  send_waypoints_500m_NW.launch  send_waypoints_500m_Square.launch  send_waypoints_500m_W.launch  send_waypoints_lawnmower_1000x100_6_10.launch  send_waypoints_lawnmower_1000x100_6_10_rotated.launch  send_waypoints_lawnmower_1000x500_2_10.launch  send_waypoints_lawnmower_100x10_7_10.launch  send_waypoints_lawnmower_iceRel_1000x100_7_10.launch  send_waypoints_lawnmower_iceRel_100x10_7_10.launch  ship.launch  usbl_test.launch  vehicle_pid_controller.launch
under_ice_sim/models/auv/: auv.gazebo  auv.sdf  auv.urdf  auv.xacro
under_ice_sim/models/dvl/: dvl.gazebo  dvl.sdf  dvl.urdftest  dvl.xacro  model.config
under_ice_sim/models/gps/: gps.gazebo  gps.sdf  gps.xacro  model.config
under_ice_sim/models/ice/: ice.gazebo  ice.sdf  ice.urdf  ice.xacro  model.config  sml_ice.sdf
under_ice_sim/models/imu/: imu.gazebo  imu.sdf  imu.xacro  model.config
under_ice_sim/models/ship/: ship.gazebo  ship.sdf  ship.xacro
under_ice_sim/models/usbl_beacon/: model.config  usbl_beacon.gazebo  usbl_beacon.sdf  usbl_beacon.xacro
under_ice_sim/models/usbl_dunker/: model.config  usbl_dunker.gazebo  usbl_dunker.sdf  usbl_dunker.xacro
under_ice_sim/scripts/: prepExpResultsFolder.sh  simulationKiller.py
under_ice_sim/src/: relative_ice_odom_publisher.cpp  tdma_broadcaster.cpp
under_ice_sim/worlds/: DRmodel.world  empty_underwater.world  gazebo_ros_range.world  gps_test.world  imu_test.world  usbl_test.world
uuv_simulator/uuv_control/uuv_thruster_manager/config/rexrov/: TAM.yaml
uuv_simulator/uuv_descriptions/models/rexrov/launch/: upload_rexrov_ui.launch
uuv_simulator/uuv_descriptions/models/rexrov/robots/: rexrov_ui.xacro
uuv_simulator/uuv_descriptions/models/rexrov/urdf/: rexrov_base_ui.xacro  rexrov_ui.gazebo.xacro
uuv_simulator/uuv_descriptions/world_models/ned_frame/: model.sdf
uuv_simulator/uuv_sensor_plugins/uuv_sensor_plugins_ros/urdf/: imu_snippets.xacro  pressure_snippets.xacro
uuv_simulator/uuv_world_plugins/uuv_world_ros_plugins/: package.xml
